Stop the header from covering the heading after navigating

--- a/responsive-nav/index.html
+++ b/responsive-nav/index.html
@@ -23,26 +23,26 @@
     </header>
         
     <main>
-        <section>
-            <h2 id="work">Work</h2>
+        <section id="work">
+            <h2>Work</h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet optio aut minima dolore modi asperiores. Officiis iusto atque incidunt deserunt temporibus, eligendi dicta possimus amet maiores corporis fugiat alias assumenda?
             </p>
         </section>
-        <section>
-            <h2 id="about">About</h2>
+        <section id="about">
+            <h2>About</h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet optio aut minima dolore modi asperiores. Officiis iusto atque incidunt deserunt temporibus, eligendi dicta possimus amet maiores corporis fugiat alias assumenda?
             </p>
         </section>
-        <section>
-            <h2 id="careers">Careers</h2>
+        <section id="careers">
+            <h2>Careers</h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet optio aut minima dolore modi asperiores. Officiis iusto atque incidunt deserunt temporibus, eligendi dicta possimus amet maiores corporis fugiat alias assumenda?
             </p>
         </section>
-        <section>
-            <h2 id="contact">Contact</h2>
+        <section id="contact">
+            <h2>Contact</h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet optio aut minima dolore modi asperiores. Officiis iusto atque incidunt deserunt temporibus, eligendi dicta possimus amet maiores corporis fugiat alias assumenda?
             </p>
